[gd_scene load_steps=4 format=3 uid="uid://b2hrobgolae4k"]

[ext_resource type="Theme" uid="uid://cyst5nhklxtvu" path="res://scenes/ui/ui_theme.tres" id="1_mhswj"]
[ext_resource type="Script" uid="uid://ds0bsnpgormsn" path="res://scenes/ui/settings_menu.gd" id="2_x3vyp"]

[sub_resource type="Theme" id="Theme_sl1te"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_x3vyp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mhswj")

[node name="Spacer" type="Control" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_top = 150

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_type_variation = &"GrayPanel"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_sl1te")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"GrayButton"
text = "Back"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.33, 0.33, 0.33, 1)
theme_override_font_sizes/font_size = 20
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"GrayLabel"
text = "Master"

[node name="MasterSlider" type="HSlider" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"GrayLabel"
text = "Music"

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label3" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"GrayLabel"
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0

[node name="Spacer2" type="Control" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -20.0

[connection signal="pressed" from="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="CanvasLayer/HBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
